# github-copilot-mcp-tutorial

./: .env.sample  .mcp.json  AGENTS.md  LICENSE  README.md  exercise1.md  exercise1_connect.md  exercise2.md  exercise2_github.md  exercise3.md  exercise4.md  exercise5.md  pyproject.toml
.devcontainer/: devcontainer.json
docs/: index.html
servers/: expenses.csv  expenses_tracker.py
src/: quiz.py
tests/: test_quiz.py
