[project]
name = "github-copilot-mcp-tutorial"
version = "0.1.0"
description = "A workshop to build a Python FastMCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp[apps]>=3.2.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8.0",
    "prek>=0.1.0",
]

[tool.ruff]
line-length = 120
target-version = "py313"
lint.select = ["E", "F", "I", "UP"]
lint.ignore = ["D203"]